--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </parent>
 
 	<modules>
-		<module>ts-verification-code-service</module>
+		<!-- <module>ts-verification-code-service</module>
 		<module>ts-contacts-service</module>
 		<module>ts-order-service</module>
 		<module>ts-order-other-service</module>
@@ -39,9 +39,9 @@
         <module>ts-route-service</module>
 		<module>ts-assurance-service</module>
 		<module>ts-seat-service</module>
-		<module>ts-travel-plan-service</module>
+		<module>ts-travel-plan-service</module> -->
 		<module>ts-route-plan-service</module>
-		<module>ts-food-map-service</module>
+		<!-- <module>ts-food-map-service</module>
         <module>ts-food-service</module>
 		<module>ts-consign-price-service</module>
         <module>ts-consign-service</module>
@@ -49,10 +49,10 @@
 		<module>ts-admin-basic-info-service</module>
         <module>ts-admin-route-service</module>
         <module>ts-admin-travel-service</module>
-		<module>ts-admin-user-service</module>
+		<module>ts-admin-user-service</module> -->
         <module>ts-common</module>
-        <module>ts-auth-service</module>
-		<module>ts-user-service</module>
+        <!-- <module>ts-auth-service</module>
+		<module>ts-user-service</module> -->
 		<!--<module>ts-ticket-advance-service</module>-->
 		<!--<module>1_services_analysis_mvn</module>-->
     </modules>
