Update pom, deployment scripts, docker image and classes to integrate sperf

--- a/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
+++ b/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
@@ -1054,10 +1054,16 @@ spec:
       labels:
         app: ts-order-service
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
         - name: ts-order-service
-          image: ssmtariq/ts-order-service:original
-          imagePullPolicy: IfNotPresent
+          image: ssmtariq/ts-order-service:sperf
+          imagePullPolicy: Always
+          securityContext:
+            privileged: true
+          volumeMounts:
+          - mountPath: /cache
+            name: cache-volume
           env:
             - name: OPENTRACING_ENABLED
               value: "true"
@@ -1073,21 +1079,73 @@ spec:
               value: "true"
             - name: SPAN_STORAGE_TYPE
               value: elasticsearch
+            - name: LD_PRELOAD
+              value: "/sperf/build/preload/libpreload.so"
+          args: [ "java", "-javaagent:/sperf/thirdparty/allocation-instrumenter/target/java-allocation-instrumenter-HEAD-SNAPSHOT.jar", "-agentpath:/sperf/build/libagent.so=ObjectUsage::MEM_LOAD_UOPS_RETIRED:L1_MISS:precise=2@10000", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/app/ts-order-service-1.0.jar" ]
           ports:
             - containerPort: 12031
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12031
             initialDelaySeconds: 160
             periodSeconds: 10
             timeoutSeconds: 5
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: ts-order-service
+# spec:
+#   selector:
+#     matchLabels:
+#       app: ts-order-service
+#   replicas: 1
+#   template:
+#     metadata:
+#       labels:
+#         app: ts-order-service
+#     spec:
+#       containers:
+#         - name: ts-order-service
+#           image: ssmtariq/ts-order-service:original
+#           imagePullPolicy: IfNotPresent
+#           env:
+#             - name: OPENTRACING_ENABLED
+#               value: "true"
+#             - name: JAEGER_SAMPLER_TYPE
+#               value: "const"
+#             - name: JAEGER_SAMPLER_PARAM
+#               value: "1"
+#             - name: LATENCY_SAMPLER_PARAM
+#               value: "1"
+#             - name: ES_SERVER_URLS
+#               value: http://192.168.226.66:9200
+#             - name: ES_TAGS_AS_FIELDS_ALL
+#               value: "true"
+#             - name: SPAN_STORAGE_TYPE
+#               value: elasticsearch
+#           ports:
+#             - containerPort: 12031
+#           resources:
+#             # requests:
+#             #   cpu: 50m
+#             #   memory: 160Mi
+#             # limits:
+#             #   cpu: 200m
+#             #   memory: 2048Mi
+#           readinessProbe:
+#             tcpSocket:
+#               port: 12031
+#             initialDelaySeconds: 160
+#             periodSeconds: 10
+#             timeoutSeconds: 5
 ---
 
 apiVersion: apps/v1
