--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
 	<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.22.RELEASE</version>
+        <version>2.6.7</version>
     </parent>
 
 	<modules>
-		<module>ts-verification-code-service</module>
-		<module>ts-contacts-service</module>
+		<!-- <module>ts-verification-code-service</module>
+		<module>ts-contacts-service</module> -->
 		<module>ts-order-service</module>
-		<module>ts-order-other-service</module>
+		<!-- <module>ts-order-other-service</module>
 		<module>ts-config-service</module>
 		<module>ts-station-service</module>
 		<module>ts-train-service</module>
@@ -49,10 +49,10 @@
 		<module>ts-admin-basic-info-service</module>
         <module>ts-admin-route-service</module>
         <module>ts-admin-travel-service</module>
-		<module>ts-admin-user-service</module>
+		<module>ts-admin-user-service</module> -->
         <module>ts-common</module>
-        <module>ts-auth-service</module>
-		<module>ts-user-service</module>
+        <!-- <module>ts-auth-service</module>
+		<module>ts-user-service</module> -->
 		<!--<module>ts-ticket-advance-service</module>-->
 		<!--<module>1_services_analysis_mvn</module>-->
     </modules>
@@ -77,18 +77,22 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.4.0</version>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.4.0</version>
+			<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -111,6 +115,16 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.31</version>
+		</dependency>
+				<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>11.0.2</version>
 		</dependency>
 
     </dependencies>
