--- a/ts-order-service/src/main/resources/application.yml
+++ b/ts-order-service/src/main/resources/application.yml
@@ -5,6 +5,13 @@ server:
 spring:
   application:
     name: ts-order-service
+  lifecycle:
+    timeout-per-shutdown-phase: "60s"
+  main:
+    allow-circular-references: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   data:
     mongodb:
       host: ts-order-mongo
