Integrate sperf to train-service and travel-plan-service

--- a/ts-travel-plan-service/src/main/resources/application.yml
+++ b/ts-travel-plan-service/src/main/resources/application.yml
@@ -5,7 +5,13 @@ server:
 spring:
   application:
     name: ts-travel-plan-service
-
+  lifecycle:
+    timeout-per-shutdown-phase: "60s"
+  main:
+    allow-circular-references: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 swagger:
   controllerPackage: travelplan.controller
