--- a/deployment/test-travel-service/ts-deployment-part2.yml
+++ b/deployment/test-travel-service/ts-deployment-part2.yml
@@ -75,12 +75,12 @@ spec:
           ports:
             - containerPort: 18767
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 100Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18767
@@ -126,12 +126,12 @@ spec:
           ports:
             - containerPort: 16112
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16112
@@ -176,12 +176,12 @@ spec:
           ports:
             - containerPort: 16113
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16113
@@ -226,12 +226,12 @@ spec:
           ports:
             - containerPort: 16114
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16114
@@ -276,12 +276,12 @@ spec:
           ports:
             - containerPort: 16115
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16115
@@ -326,12 +326,12 @@ spec:
           ports:
             - containerPort: 18888
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18888
@@ -376,12 +376,12 @@ spec:
           ports:
             - containerPort: 15680
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 15680
@@ -426,12 +426,12 @@ spec:
           ports:
             - containerPort: 18885
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18885
@@ -476,12 +476,12 @@ spec:
           ports:
             - containerPort: 15679
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 15679
@@ -526,12 +526,12 @@ spec:
           ports:
             - containerPort: 16110
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16110
@@ -576,12 +576,12 @@ spec:
           ports:
             - containerPort: 16111
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16111
@@ -626,12 +626,12 @@ spec:
           ports:
             - containerPort: 12347
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12347
@@ -676,12 +676,12 @@ spec:
           ports:
             - containerPort: 12386
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12386
@@ -726,12 +726,12 @@ spec:
           ports:
             - containerPort: 18855
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18855
@@ -776,12 +776,12 @@ spec:
           ports:
             - containerPort: 18856
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18856
@@ -826,12 +826,12 @@ spec:
           ports:
             - containerPort: 18673
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18673
@@ -876,12 +876,12 @@ spec:
           ports:
             - containerPort: 12340
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12340
@@ -926,12 +926,12 @@ spec:
           ports:
             - containerPort: 12862
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12862
@@ -976,12 +976,12 @@ spec:
           ports:
             - containerPort: 17853
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 1024Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 1024Mi
           readinessProbe:
             tcpSocket:
               port: 17853
@@ -1026,12 +1026,12 @@ spec:
           ports:
             - containerPort: 12032
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12032
@@ -1076,12 +1076,12 @@ spec:
           ports:
             - containerPort: 12031
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12031
@@ -1126,12 +1126,12 @@ spec:
           ports:
             - containerPort: 19001
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 19001
@@ -1176,12 +1176,12 @@ spec:
           ports:
             - containerPort: 14569
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14569
@@ -1226,12 +1226,12 @@ spec:
           ports:
             - containerPort: 14568
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14568
@@ -1276,12 +1276,12 @@ spec:
           ports:
             - containerPort: 16579
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16579
@@ -1326,12 +1326,12 @@ spec:
           ports:
             - containerPort: 18886
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18886
@@ -1376,12 +1376,12 @@ spec:
           ports:
             - containerPort: 14578
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14578
@@ -1426,12 +1426,12 @@ spec:
           ports:
             - containerPort: 11178
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 11178
@@ -1476,12 +1476,12 @@ spec:
           ports:
             - containerPort: 18898
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 18898
@@ -1526,12 +1526,12 @@ spec:
           ports:
             - containerPort: 11188
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 11188
@@ -1576,12 +1576,12 @@ spec:
           ports:
             - containerPort: 12342
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12342
@@ -1626,12 +1626,12 @@ spec:
           ports:
             - containerPort: 12345
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12345
@@ -1676,12 +1676,12 @@ spec:
           ports:
             - containerPort: 16108
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16108
@@ -1726,12 +1726,12 @@ spec:
           ports:
             - containerPort: 15681
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 15681
@@ -1776,12 +1776,12 @@ spec:
           ports:
             - containerPort: 14567
           resources:
-            requests:
-              cpu: 50m
-              memory: 1024Mi
-            limits:
-              cpu: 200m
-              memory: 4096Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 1024Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 4096Mi
           readinessProbe:
             tcpSocket:
              port: 14567
@@ -1828,12 +1828,12 @@ spec:
           ports:
             - containerPort: 16346
           resources:
-            requests:
-              cpu: 100m
-              memory: 500Mi
-            limits:
-              cpu: 500m
-              memory: 4096Mi
+            # requests:
+            #   cpu: 100m
+            #   memory: 500Mi
+            # limits:
+            #   cpu: 500m
+            #   memory: 4096Mi
           readinessProbe:
             tcpSocket:
               port: 16346
@@ -1878,12 +1878,12 @@ spec:
           ports:
             - containerPort: 14322
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14322
@@ -2039,12 +2039,12 @@ spec:
           ports:
             - containerPort: 15678
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 15678
@@ -2089,12 +2089,12 @@ spec:
           ports:
             - containerPort: 16101
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16101
