--- a/deployment/test-config-service/ts-deployment-part2.yml
+++ b/deployment/test-config-service/ts-deployment-part2.yml
@@ -75,12 +75,12 @@ spec:
           ports:
             - containerPort: 18767
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 100Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18767
@@ -126,12 +126,12 @@ spec:
           ports:
             - containerPort: 16112
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16112
@@ -176,12 +176,12 @@ spec:
           ports:
             - containerPort: 16113
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16113
@@ -226,12 +226,12 @@ spec:
           ports:
             - containerPort: 16114
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16114
@@ -276,12 +276,12 @@ spec:
           ports:
             - containerPort: 16115
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16115
@@ -326,12 +326,12 @@ spec:
           ports:
             - containerPort: 18888
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18888
@@ -376,12 +376,12 @@ spec:
           ports:
             - containerPort: 15680
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 15680
@@ -426,12 +426,12 @@ spec:
           ports:
             - containerPort: 18885
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18885
@@ -587,12 +587,12 @@ spec:
           ports:
             - containerPort: 16110
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16110
@@ -637,12 +637,12 @@ spec:
           ports:
             - containerPort: 16111
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16111
@@ -687,12 +687,12 @@ spec:
           ports:
             - containerPort: 12347
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12347
@@ -737,12 +737,12 @@ spec:
           ports:
             - containerPort: 12386
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12386
@@ -787,12 +787,12 @@ spec:
           ports:
             - containerPort: 18855
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18855
@@ -837,12 +837,12 @@ spec:
           ports:
             - containerPort: 18856
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18856
@@ -887,12 +887,12 @@ spec:
           ports:
             - containerPort: 18673
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18673
@@ -937,12 +937,12 @@ spec:
           ports:
             - containerPort: 12340
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12340
@@ -987,12 +987,12 @@ spec:
           ports:
             - containerPort: 12862
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12862
@@ -1037,12 +1037,12 @@ spec:
           ports:
             - containerPort: 17853
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 1024Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 1024Mi
           readinessProbe:
             tcpSocket:
               port: 17853
@@ -1087,12 +1087,12 @@ spec:
           ports:
             - containerPort: 12032
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12032
@@ -1137,12 +1137,12 @@ spec:
           ports:
             - containerPort: 12031
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12031
@@ -1187,12 +1187,12 @@ spec:
           ports:
             - containerPort: 19001
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 19001
@@ -1237,12 +1237,12 @@ spec:
           ports:
             - containerPort: 14569
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14569
@@ -1287,12 +1287,12 @@ spec:
           ports:
             - containerPort: 14568
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14568
@@ -1337,12 +1337,12 @@ spec:
           ports:
             - containerPort: 16579
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16579
@@ -1387,12 +1387,12 @@ spec:
           ports:
             - containerPort: 18886
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 18886
@@ -1437,12 +1437,12 @@ spec:
           ports:
             - containerPort: 14578
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14578
@@ -1487,12 +1487,12 @@ spec:
           ports:
             - containerPort: 11178
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 11178
@@ -1537,12 +1537,12 @@ spec:
           ports:
             - containerPort: 18898
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 18898
@@ -1587,12 +1587,12 @@ spec:
           ports:
             - containerPort: 11188
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 11188
@@ -1637,12 +1637,12 @@ spec:
           ports:
             - containerPort: 12342
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 12342
@@ -1687,12 +1687,12 @@ spec:
           ports:
             - containerPort: 12345
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12345
@@ -1737,12 +1737,12 @@ spec:
           ports:
             - containerPort: 16108
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16108
@@ -1787,12 +1787,12 @@ spec:
           ports:
             - containerPort: 15681
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 15681
@@ -1837,12 +1837,12 @@ spec:
           ports:
             - containerPort: 14567
           resources:
-            requests:
-              cpu: 50m
-              memory: 1024Mi
-            limits:
-              cpu: 200m
-              memory: 4096Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 1024Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 4096Mi
           readinessProbe:
             tcpSocket:
              port: 14567
@@ -1889,12 +1889,12 @@ spec:
           ports:
             - containerPort: 16346
           resources:
-            requests:
-              cpu: 100m
-              memory: 500Mi
-            limits:
-              cpu: 500m
-              memory: 4096Mi
+            # requests:
+            #   cpu: 100m
+            #   memory: 500Mi
+            # limits:
+            #   cpu: 500m
+            #   memory: 4096Mi
           readinessProbe:
             tcpSocket:
               port: 16346
@@ -1939,12 +1939,12 @@ spec:
           ports:
             - containerPort: 14322
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 14322
@@ -1989,12 +1989,12 @@ spec:
           ports:
             - containerPort: 12346
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 2048Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12346
@@ -2039,12 +2039,12 @@ spec:
           ports:
             - containerPort: 15678
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 15678
@@ -2089,12 +2089,12 @@ spec:
           ports:
             - containerPort: 16101
           resources:
-            requests:
-              cpu: 50m
-              memory: 160Mi
-            limits:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 160Mi
+            # limits:
+            #   cpu: 200m
+            #   memory: 500Mi
           readinessProbe:
             tcpSocket:
               port: 16101
