--- a/deployment/test-contacts-service/ts-deployment-part3.yml
+++ b/deployment/test-contacts-service/ts-deployment-part3.yml
@@ -19,12 +19,12 @@ spec:
         ports:
         - containerPort: 8080
         resources:
-          requests:
-            cpu: 300m
-            memory: 1024Mi
-          limits:
-            cpu: 500m
-            memory: 4096Mi
+          # requests:
+          #   cpu: 300m
+          #   memory: 1024Mi
+          # limits:
+          #   cpu: 500m
+          #   memory: 4096Mi
 
 ---
 
