--- a/deployment/test-travel-service/ts-deployment-part1.yml
+++ b/deployment/test-travel-service/ts-deployment-part1.yml
@@ -19,9 +19,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 ---
 
 apiVersion: apps/v1
@@ -45,9 +45,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 ---
 
 apiVersion: apps/v1
@@ -71,9 +71,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -98,9 +98,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -125,9 +125,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -152,9 +152,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -179,9 +179,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -206,9 +206,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -233,9 +233,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 200m
-              memory: 1024Mi
+            # requests:
+              # cpu: 200m
+              # memory: 1024Mi
 
 ---
 
@@ -260,9 +260,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 200m
-              memory: 1024Mi
+            # requests:
+              # cpu: 200m
+              # memory: 1024Mi
 
 ---
 
@@ -287,9 +287,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 200m
-              memory: 1024Mi
+            # requests:
+              # cpu: 200m
+              # memory: 1024Mi
 
 ---
 
@@ -314,9 +314,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -341,9 +341,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -368,9 +368,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -395,9 +395,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -422,9 +422,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -449,9 +449,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 
 ---
@@ -481,9 +481,9 @@ spec:
           ports:
             - containerPort: 3306
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -508,9 +508,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 
@@ -535,9 +535,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 100Mi
 
 ---
 
@@ -562,9 +562,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+            #   cpu: 50m
+            #   memory: 100Mi
 
 ---
 
@@ -589,9 +589,9 @@ spec:
           ports:
             - containerPort: 27017
           resources:
-            requests:
-              cpu: 50m
-              memory: 100Mi
+            # requests:
+              # cpu: 50m
+              # memory: 100Mi
 
 ---
 apiVersion: v1
