--- a/ts-ui-dashboard/nginx.conf
+++ b/ts-ui-dashboard/nginx.conf
@@ -81,7 +81,7 @@ http {
     }
 
     # For config service
-    location /api/v1/configservice" {
+    location /api/v1/configservice {
       proxy_pass   http://ts-config-service:15679;
     }
 
@@ -120,6 +120,10 @@ http {
     # For order other service
 
     location /api/v1/orderOtherService/orderOther/refresh {
+      proxy_pass   http://ts-order-other-service:12032;
+    }
+
+    location /api/v1/orderOtherService/orderOther/tickets {
       proxy_pass   http://ts-order-other-service:12032;
     }
 
